Add Info Remarks

--- a/yahoo_finance.ipynb
+++ b/yahoo_finance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
        "[500 rows x 3 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -226,38 +226,38 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>93</th>\n",
+       "      <th>88</th>\n",
        "      <td>dividendYield</td>\n",
        "      <td>0.00850</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>94</th>\n",
+       "      <th>89</th>\n",
        "      <td>bidSize</td>\n",
        "      <td>900.00000</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>95</th>\n",
+       "      <th>90</th>\n",
        "      <td>dayHigh</td>\n",
        "      <td>289.25000</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>96</th>\n",
+       "      <th>91</th>\n",
        "      <td>regularMarketPrice</td>\n",
        "      <td>286.15000</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>97</th>\n",
+       "      <th>92</th>\n",
        "      <td>trailingPegRatio</td>\n",
        "      <td>2.18030</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>98 rows × 3 columns</p>\n",
+       "<p>93 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -268,16 +268,16 @@
        "3        profitMargins       0.36686        \n",
        "4         grossMargins       0.68402        \n",
        "..                 ...           ...     ...\n",
-       "93       dividendYield       0.00850        \n",
-       "94             bidSize     900.00000        \n",
-       "95             dayHigh     289.25000        \n",
-       "96  regularMarketPrice     286.15000        \n",
-       "97    trailingPegRatio       2.18030        \n",
+       "88       dividendYield       0.00850        \n",
+       "89             bidSize     900.00000        \n",
+       "90             dayHigh     289.25000        \n",
+       "91  regularMarketPrice     286.15000        \n",
+       "92    trailingPegRatio       2.18030        \n",
        "\n",
-       "[98 rows x 3 columns]"
+       "[93 rows x 3 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,12 +287,13 @@
     "list_stock = []\n",
     "for key, value in msft.info.items():\n",
     "    try:\n",
+    "        if \"date\" in key.lower(): continue\n",
     "        list_stock.append([key, float(value), \"\"])\n",
     "    except:\n",
     "        pass\n",
     "df_stock = pd.DataFrame(data=list_stock, columns=[\"KEY\", \"VALUE\", \"REMARKS\"])\n",
     "df_stock\n",
-    "df_stock.to_csv(\"stock_base_info.csv\", encoding=utf-8-sig\""
+    "df_stock.to_csv(\"stock_base_info.csv\", encoding=\"utf-8-sig\", index=False)"
    ]
   },
   {
@@ -3434,7 +3435,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
