--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
+   "id": "e85912f0",
    "metadata": {},
    "outputs": [
     {
@@ -10,60 +11,64 @@
      "output_type": "stream",
      "text": [
       "Collecting yahoo_fin\n",
-      "  Using cached yahoo_fin-0.8.9.1-py3-none-any.whl (10 kB)\n",
-      "Requirement already satisfied: requests in /Users/etlers/opt/anaconda3/lib/python3.9/site-packages (from yahoo_fin) (2.27.1)\n",
-      "Collecting requests-html\n",
-      "  Using cached requests_html-0.10.0-py3-none-any.whl (13 kB)\n",
-      "Requirement already satisfied: pandas in /Users/etlers/opt/anaconda3/lib/python3.9/site-packages (from yahoo_fin) (1.4.2)\n",
+      "  Downloading yahoo_fin-0.8.9.1-py3-none-any.whl (10 kB)\n",
+      "Requirement already satisfied: pandas in c:\\programdata\\anaconda3\\lib\\site-packages (from yahoo_fin) (1.4.2)\n",
       "Collecting feedparser\n",
-      "  Using cached feedparser-6.0.10-py3-none-any.whl (81 kB)\n",
+      "  Downloading feedparser-6.0.10-py3-none-any.whl (81 kB)\n",
+      "Collecting requests-html\n",
+      "  Downloading requests_html-0.10.0-py3-none-any.whl (13 kB)\n",
+      "Requirement already satisfied: requests in c:\\programdata\\anaconda3\\lib\\site-packages (from yahoo_fin) (2.27.1)\n",
       "Collecting sgmllib3k\n",
-      "  Using cached sgmllib3k-1.0.0.tar.gz (5.8 kB)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.1 in /Users/etlers/opt/anaconda3/lib/python3.9/site-packages (from pandas->yahoo_fin) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /Users/etlers/opt/anaconda3/lib/python3.9/site-packages (from pandas->yahoo_fin) (2021.3)\n",
-      "Requirement already satisfied: numpy>=1.18.5 in /Users/etlers/opt/anaconda3/lib/python3.9/site-packages (from pandas->yahoo_fin) (1.21.5)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/etlers/opt/anaconda3/lib/python3.9/site-packages (from python-dateutil>=2.8.1->pandas->yahoo_fin) (1.16.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /Users/etlers/opt/anaconda3/lib/python3.9/site-packages (from requests->yahoo_fin) (2021.10.8)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/etlers/opt/anaconda3/lib/python3.9/site-packages (from requests->yahoo_fin) (1.26.9)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /Users/etlers/opt/anaconda3/lib/python3.9/site-packages (from requests->yahoo_fin) (3.3)\n",
-      "Requirement already satisfied: charset-normalizer~=2.0.0 in /Users/etlers/opt/anaconda3/lib/python3.9/site-packages (from requests->yahoo_fin) (2.0.4)\n",
-      "Collecting parse\n",
-      "  Using cached parse-1.19.0.tar.gz (30 kB)\n",
-      "Requirement already satisfied: w3lib in /Users/etlers/opt/anaconda3/lib/python3.9/site-packages (from requests-html->yahoo_fin) (1.21.0)\n",
+      "  Downloading sgmllib3k-1.0.0.tar.gz (5.8 kB)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in c:\\programdata\\anaconda3\\lib\\site-packages (from pandas->yahoo_fin) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\programdata\\anaconda3\\lib\\site-packages (from pandas->yahoo_fin) (2021.3)\n",
+      "Requirement already satisfied: numpy>=1.18.5 in c:\\programdata\\anaconda3\\lib\\site-packages (from pandas->yahoo_fin) (1.21.5)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\programdata\\anaconda3\\lib\\site-packages (from python-dateutil>=2.8.1->pandas->yahoo_fin) (1.16.0)\n",
+      "Requirement already satisfied: charset-normalizer~=2.0.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from requests->yahoo_fin) (2.0.4)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\programdata\\anaconda3\\lib\\site-packages (from requests->yahoo_fin) (2021.10.8)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\programdata\\anaconda3\\lib\\site-packages (from requests->yahoo_fin) (1.26.9)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\programdata\\anaconda3\\lib\\site-packages (from requests->yahoo_fin) (3.3)\n",
+      "Requirement already satisfied: w3lib in c:\\programdata\\anaconda3\\lib\\site-packages (from requests-html->yahoo_fin) (1.21.0)\n",
       "Collecting pyppeteer>=0.0.14\n",
-      "  Using cached pyppeteer-1.0.2-py3-none-any.whl (83 kB)\n",
-      "Collecting bs4\n",
-      "  Using cached bs4-0.0.1.tar.gz (1.1 kB)\n",
+      "  Downloading pyppeteer-1.0.2-py3-none-any.whl (83 kB)\n",
+      "Collecting parse\n",
+      "  Downloading parse-1.19.0.tar.gz (30 kB)\n",
       "Collecting pyquery\n",
-      "  Using cached pyquery-1.4.3-py3-none-any.whl (22 kB)\n",
+      "  Downloading pyquery-1.4.3-py3-none-any.whl (22 kB)\n",
       "Collecting fake-useragent\n",
-      "  Using cached fake-useragent-0.1.11.tar.gz (13 kB)\n",
-      "Requirement already satisfied: tqdm<5.0.0,>=4.42.1 in /Users/etlers/opt/anaconda3/lib/python3.9/site-packages (from pyppeteer>=0.0.14->requests-html->yahoo_fin) (4.64.0)\n",
-      "Requirement already satisfied: appdirs<2.0.0,>=1.4.3 in /Users/etlers/opt/anaconda3/lib/python3.9/site-packages (from pyppeteer>=0.0.14->requests-html->yahoo_fin) (1.4.4)\n",
+      "  Downloading fake-useragent-0.1.11.tar.gz (13 kB)\n",
+      "Collecting bs4\n",
+      "  Downloading bs4-0.0.1.tar.gz (1.1 kB)\n",
+      "Collecting pyee<9.0.0,>=8.1.0\n",
+      "  Downloading pyee-8.2.2-py2.py3-none-any.whl (12 kB)\n",
+      "Requirement already satisfied: importlib-metadata>=1.4 in c:\\programdata\\anaconda3\\lib\\site-packages (from pyppeteer>=0.0.14->requests-html->yahoo_fin) (4.11.3)\n",
       "Collecting websockets<11.0,>=10.0\n",
-      "  Downloading websockets-10.3-cp39-cp39-macosx_10_9_x86_64.whl (97 kB)\n",
-      "\u001b[K     |████████████████████████████████| 97 kB 5.7 MB/s  eta 0:00:01\n",
-      "\u001b[?25hCollecting pyee<9.0.0,>=8.1.0\n",
-      "  Using cached pyee-8.2.2-py2.py3-none-any.whl (12 kB)\n",
-      "Requirement already satisfied: importlib-metadata>=1.4 in /Users/etlers/opt/anaconda3/lib/python3.9/site-packages (from pyppeteer>=0.0.14->requests-html->yahoo_fin) (4.11.3)\n",
-      "Requirement already satisfied: zipp>=0.5 in /Users/etlers/opt/anaconda3/lib/python3.9/site-packages (from importlib-metadata>=1.4->pyppeteer>=0.0.14->requests-html->yahoo_fin) (3.7.0)\n",
-      "Requirement already satisfied: beautifulsoup4 in /Users/etlers/opt/anaconda3/lib/python3.9/site-packages (from bs4->requests-html->yahoo_fin) (4.11.1)\n",
-      "Requirement already satisfied: soupsieve>1.2 in /Users/etlers/opt/anaconda3/lib/python3.9/site-packages (from beautifulsoup4->bs4->requests-html->yahoo_fin) (2.3.1)\n",
-      "Requirement already satisfied: cssselect>0.7.9 in /Users/etlers/opt/anaconda3/lib/python3.9/site-packages (from pyquery->requests-html->yahoo_fin) (1.1.0)\n",
-      "Requirement already satisfied: lxml>=2.1 in /Users/etlers/opt/anaconda3/lib/python3.9/site-packages (from pyquery->requests-html->yahoo_fin) (4.8.0)\n",
+      "  Downloading websockets-10.3-cp39-cp39-win_amd64.whl (98 kB)\n",
+      "Requirement already satisfied: appdirs<2.0.0,>=1.4.3 in c:\\programdata\\anaconda3\\lib\\site-packages (from pyppeteer>=0.0.14->requests-html->yahoo_fin) (1.4.4)\n",
+      "Requirement already satisfied: tqdm<5.0.0,>=4.42.1 in c:\\programdata\\anaconda3\\lib\\site-packages (from pyppeteer>=0.0.14->requests-html->yahoo_fin) (4.64.0)\n",
+      "Requirement already satisfied: zipp>=0.5 in c:\\programdata\\anaconda3\\lib\\site-packages (from importlib-metadata>=1.4->pyppeteer>=0.0.14->requests-html->yahoo_fin) (3.7.0)\n",
+      "Requirement already satisfied: colorama in c:\\programdata\\anaconda3\\lib\\site-packages (from tqdm<5.0.0,>=4.42.1->pyppeteer>=0.0.14->requests-html->yahoo_fin) (0.4.4)\n",
+      "Requirement already satisfied: beautifulsoup4 in c:\\programdata\\anaconda3\\lib\\site-packages (from bs4->requests-html->yahoo_fin) (4.11.1)\n",
+      "Requirement already satisfied: soupsieve>1.2 in c:\\programdata\\anaconda3\\lib\\site-packages (from beautifulsoup4->bs4->requests-html->yahoo_fin) (2.3.1)\n",
+      "Requirement already satisfied: lxml>=2.1 in c:\\programdata\\anaconda3\\lib\\site-packages (from pyquery->requests-html->yahoo_fin) (4.8.0)\n",
+      "Requirement already satisfied: cssselect>0.7.9 in c:\\programdata\\anaconda3\\lib\\site-packages (from pyquery->requests-html->yahoo_fin) (1.1.0)\n",
       "Building wheels for collected packages: bs4, fake-useragent, parse, sgmllib3k\n",
-      "  Building wheel for bs4 (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for bs4: filename=bs4-0.0.1-py3-none-any.whl size=1272 sha256=563773599365a86e7f2482759c7ef3e54b7a6455f5d73906d02341b3fd41e779\n",
-      "  Stored in directory: /Users/etlers/Library/Caches/pip/wheels/73/2b/cb/099980278a0c9a3e57ff1a89875ec07bfa0b6fcbebb9a8cad3\n",
-      "  Building wheel for fake-useragent (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for fake-useragent: filename=fake_useragent-0.1.11-py3-none-any.whl size=13502 sha256=caecbd33013118e0fd216cb9bc754264e1d8ae22e6084710f84e47b5e68dfb7d\n",
-      "  Stored in directory: /Users/etlers/Library/Caches/pip/wheels/ae/e7/76/7dd44644d065268ab0e1b4fa2e802fa4bb0157717b7d6c6d92\n",
-      "  Building wheel for parse (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for parse: filename=parse-1.19.0-py3-none-any.whl size=24591 sha256=eef309a221025a3f340ccf1d6f16b95cbbac7e92611690d9362a5c934a2283c4\n",
-      "  Stored in directory: /Users/etlers/Library/Caches/pip/wheels/d6/9c/58/ee3ba36897e890f3ad81e9b730791a153fce20caa4a8a474df\n",
-      "  Building wheel for sgmllib3k (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for sgmllib3k: filename=sgmllib3k-1.0.0-py3-none-any.whl size=6066 sha256=ac8c9b08870270bb68ba0b5b9f8ba86b5651b322d6bd5e09151c2ec3bfae40cb\n",
-      "  Stored in directory: /Users/etlers/Library/Caches/pip/wheels/65/7a/a7/78c287f64e401255dff4c13fdbc672fed5efbfd21c530114e1\n",
+      "  Building wheel for bs4 (setup.py): started\n",
+      "  Building wheel for bs4 (setup.py): finished with status 'done'\n",
+      "  Created wheel for bs4: filename=bs4-0.0.1-py3-none-any.whl size=1272 sha256=331b5b8691e54c1ee7ac7703f2bc4edb8d7f12d6437a51ad29acecfbcfff353e\n",
+      "  Stored in directory: c:\\users\\etlers\\appdata\\local\\pip\\cache\\wheels\\73\\2b\\cb\\099980278a0c9a3e57ff1a89875ec07bfa0b6fcbebb9a8cad3\n",
+      "  Building wheel for fake-useragent (setup.py): started\n",
+      "  Building wheel for fake-useragent (setup.py): finished with status 'done'\n",
+      "  Created wheel for fake-useragent: filename=fake_useragent-0.1.11-py3-none-any.whl size=13502 sha256=4aabfad261c7508fc0deee4b7757a0782eca08f29842661c7b12617fb5884532\n",
+      "  Stored in directory: c:\\users\\etlers\\appdata\\local\\pip\\cache\\wheels\\ae\\e7\\76\\7dd44644d065268ab0e1b4fa2e802fa4bb0157717b7d6c6d92\n",
+      "  Building wheel for parse (setup.py): started\n",
+      "  Building wheel for parse (setup.py): finished with status 'done'\n",
+      "  Created wheel for parse: filename=parse-1.19.0-py3-none-any.whl size=24591 sha256=ff6ba3ac04f2aba4acd293bdba93176954bb0e0fe5cf473d59d86d3eb043da91\n",
+      "  Stored in directory: c:\\users\\etlers\\appdata\\local\\pip\\cache\\wheels\\d6\\9c\\58\\ee3ba36897e890f3ad81e9b730791a153fce20caa4a8a474df\n",
+      "  Building wheel for sgmllib3k (setup.py): started\n",
+      "  Building wheel for sgmllib3k (setup.py): finished with status 'done'\n",
+      "  Created wheel for sgmllib3k: filename=sgmllib3k-1.0.0-py3-none-any.whl size=6066 sha256=6837f14d79e9d5fe38c85f3088cdda9313ecfc7c60cc3ff4464cf80e0d696a24\n",
+      "  Stored in directory: c:\\users\\etlers\\appdata\\local\\pip\\cache\\wheels\\65\\7a\\a7\\78c287f64e401255dff4c13fdbc672fed5efbfd21c530114e1\n",
       "Successfully built bs4 fake-useragent parse sgmllib3k\n",
       "Installing collected packages: websockets, pyee, sgmllib3k, pyquery, pyppeteer, parse, fake-useragent, bs4, requests-html, feedparser, yahoo-fin\n",
       "Successfully installed bs4-0.0.1 fake-useragent-0.1.11 feedparser-6.0.10 parse-1.19.0 pyee-8.2.2 pyppeteer-1.0.2 pyquery-1.4.3 requests-html-0.10.0 sgmllib3k-1.0.0 websockets-10.3 yahoo-fin-0.8.9.1\n"
@@ -76,7 +81,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
+   "id": "aad70a4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,28 +97,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
+   "id": "54275a29",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "503"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########\n",
+      "##########"
+     ]
     }
    ],
    "source": [
-    "sp500_tickers = SI.tickers_sp500()\n",
-    "len(sp500_tickers)"
+    "idx = 0\n",
+    "for _ in range(500):\n",
+    "    if idx % 10 == 0:\n",
+    "        print(\"\")\n",
+    "    print(\"#\", end=\"\")\n",
+    "    idx += 1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "9649ec85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,6 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "d1a67c38",
    "metadata": {},
    "outputs": [
     {
@@ -186,6 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f1d7f5af",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -193,7 +254,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
